[package]
name = "multisplice"
version = "0.3.0"
description = "easily splice a string multiple times, using offsets into the original string"
authors = ["Renée Kooi <renee@kooi.me>"]
edition = "2018"
repository = "https://github.com/goto-bus-stop/multisplice-rs"
homepage = "https://github.com/goto-bus-stop/multisplice-rs"
license = "Apache-2.0"

[dependencies]
